Fix spacing, bump version

--- a/packages/ui/src/styles/index.scss
+++ b/packages/ui/src/styles/index.scss
@@ -5,6 +5,10 @@ html,
   position: relative;
 }
 
+#root {
+  padding-bottom: 30vh;
+}
+
 hr {
   margin-top: 20px !important;
   margin-bottom: 20px !important;
